# embedding_bucketing

./: .gitignore  Genre_CACHE.json  README.md  cache.json  cache_comparititve_title.json  cache_genre.json  cache_store.py  cache_theme.json  comparitive_title_query.py  embedding_model_test.py  genre_query.py  pyproject.toml  requirements.txt  setup.py  theme_buckting.py
Module/: __init__.py  cache_store.py  embedding_model_test.py  genre_query.py
embedding_bucketing/: __init__.py  embedding_model_test.py
embedding_buckting/: __init__.py  embedding_model_test.py  theme_buckting.py
examples/: cache_genre_rec.json  comparative_title.py  comparative_title_with_llm.py  comparitive_title_query.py  genre.py  genre_query.py  tester-recommender.py  theme.py  theme_buckting.py  wscripted.py
