[project]
name = "embedding_bucketing"
version = "0.1.0"
license = {file = "LICENSE.txt"}
dependencies = [
    "numpy",
    "openai",
    "scikit-learn"
]
authors = [
  { name="Rafayel Latif", email="Rafayel.latif@gmail.com" }
]
description = "embedding_bucketing"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Artificial Life",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"
